--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/example
+spring.datasource.username=example
+spring.datasource.password=passwordnyaExample
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
