--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=example
 spring.datasource.password=passwordnyaExample
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
+spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references=true
